Fixing css layout on firefox and safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,3 +190,7 @@ li {
   border-radius: 5px;
   border: 2px solid #25d554;
 }
+
+.education {
+  z-index: 20;
+}
